<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@drawable/symptoms_screen"
    android:gravity="center"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/qa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:alpha="0.95"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        app:cardCornerRadius="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:paddingLeft="10dp"
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/covidSymptomsq1"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/a1"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:text="@string/covidSymptomsa1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/qa2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        android:alpha="0.95"
        app:cardCornerRadius="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/covidSymptomsq2"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/covidSymptomsa2"
                android:textColor="@color/colorPrimaryDark"
                android:paddingLeft="25dp"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/qa3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            android:alpha="0.95"
            app:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/q3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/covidSymptomsq3"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="10dp"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/a3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/covidSymptomsa3"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingLeft="25dp"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/qa4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            android:alpha="0.95"
            app:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/q4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/covidSymptomsq4"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="10dp"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/a4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/covidSymptomsa4"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingLeft="25dp"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
</LinearLayout>