<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/medicineThumbNail1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="2"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingVertical="10dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp">

                    <TextView
                        android:id="@+id/MedicineName1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/medicine1title"
                        android:textColor="@android:color/white"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/Medicineinfo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/medicine1description"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/medicineLink1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:clickable="true"
                        android:gravity="start"
                        android:linksClickable="true"
                        android:text="@string/medicine1link"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/medicineThumbNail2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="2"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingVertical="10dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp">

                    <TextView
                        android:id="@+id/MedicineName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/medicine2title"
                        android:textColor="@android:color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/Medicineinfo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/medicine2description"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/medicineLink2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:clickable="true"
                        android:gravity="start"
                        android:linksClickable="true"
                        android:text="@string/medicine2link"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/medicineThumbNail3"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="2"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingVertical="10dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp">

                    <TextView
                        android:id="@+id/MedicineName3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/medicine3title"
                        android:textColor="@android:color/white"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/Medicineinfo3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/medicine3description"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/medicineLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:clickable="true"
                        android:gravity="start"
                        android:linksClickable="true"
                        android:text="@string/medicine3link"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/medicineThumbNail4"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_weight="2"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingVertical="10dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp">

                    <TextView
                        android:id="@+id/MedicineName4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/medicine4title"
                        android:textColor="@android:color/white"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/Medicineinfo4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/medicine4description"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/medicineLink4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:clickable="true"
                        android:gravity="start"
                        android:linksClickable="true"
                        android:text="@string/medicine4link"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>