<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp">
        <ImageView
            android:id="@+id/thumbNail"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/news"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/news_title"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center|start"
            android:paddingHorizontal="20dp" />
        <TextView
            android:id="@+id/newsSummary"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_summary"
            android:textSize="12sp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/colorPrimary"
            android:linksClickable="true"
            android:clickable="true"
            android:autoLink="web"
            />
        <TextView
            android:id="@+id/newsLink"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/more"
            android:gravity="right|top"
            android:textSize="12sp"
            android:paddingHorizontal="20dp"
            android:textColor="@android:color/holo_blue_dark"
            android:linksClickable="true"
            android:clickable="true"
            android:autoLink="web"
            />
        <ImageView
            android:src="@drawable/swipe_up_animation"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="75dp"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>